# libvirt-designer

./: .gitignore  .gitpublish  AUTHORS  AUTHORS.in  HACKING  Makefile.am  NEWS  README  README.in  autobuild.sh  autogen.sh  cfg.mk  configure.ac  libvirt-designer-1.0.pc.in  libvirt-designer.spec.in
.github/: lockdown.yml
docs/: Makefile.am  libvirt-designer-docs.xml
examples/: Makefile.am  virt-designer.c  virtxml.c
libvirt-designer/: Makefile.am  libvirt-designer-domain.c  libvirt-designer-domain.h  libvirt-designer-enum-types.c.template  libvirt-designer-enum-types.h.template  libvirt-designer-internal.c  libvirt-designer-internal.h  libvirt-designer-main.c  libvirt-designer-main.h  libvirt-designer.h  libvirt-designer.sym  test-designer-domain.c
m4/: virt-compile-warnings.m4  virt-coverage.m4  virt-gettext.m4  virt-gtk-misc.m4  virt-introspection.m4  virt-win32.m4
vapi/: Makefile.am  libvirt-designer-1.0.deps
